@@ -306,6 +306,26 @@ class TestLoggingInteraction:
             # verify proper termination
             assert "closed" not in s
 
+    def test_logging_initialized_in_test(self, testdir):
+        p = testdir.makepyfile("""
+            import sys
+            def test_something():
+                # pytest does not import logging
+                assert 'logging' not in sys.modules
+                import logging
+                logging.basicConfig()
+                logging.warn("hello432")
+                assert 0
+        """)
+        result = testdir.runpytest(p, "--traceconfig",
+            "-p", "no:capturelog")
+        assert result.ret != 0
+        result.stdout.fnmatch_lines([
+            "*hello432*",
+        ])
+        assert 'operation on closed file' not in result.stderr.str()
+
+
 class TestCaptureFuncarg:
     def test_std_functional(self, testdir):
         reprec = testdir.inline_runsource("""
