@@ -73,3 +73,4 @@ rsyncdirs=tox.ini pytest.py _pytest testing
 python_files=test_*.py *_test.py
 python_classes=Test Acceptance
 python_functions=test
+pep8ignore = E401
